moved config to project yaml from model

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -42,7 +42,9 @@ models:
       +materialized: view
     integration:
       +materialized: table
+      +transient: false
      
     gold:
       +materialized: table
+      +transient: true
      
