--- a/models/stg/stripe/src_stripe.yml
+++ b/models/stg/stripe/src_stripe.yml
@@ -5,14 +5,15 @@ sources:
     database: raw
     schema: stripe
     tables:
+
       - name: payment
         loaded_at_field: _batched_at
         freshness: 
           error_after:
-            count: 24
-            period: hour
+            count: 100
+            period: day
           warn_after:
-            count: 12
-            period: hour
+            count: 100
+            period: day
         
 
